# acpkit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG  CONTRIBUTING.md  COVERAGE  Makefile  README.md  SKILL.md  context7.json  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/workflows/: ci.yml  codecov.yml  docs.yml  monorepo-ci.yml  publish.yml  test.yml
about/: index.html
acpremote/: index.html
api/acpkit/: index.html
api/acpremote/: index.html
api/codex_auth_helper/: index.html
api/langchain_acp/: index.html
api/pydantic_acp/: index.html
bridges/: index.html
cli/: index.html
compatibility-matrix-template/: index.html
docs/: acpremote.md  bridges.md  cli.md  compatibility-matrix-template.md  helpers.md  host-backends.md  index.md  integration-audit.md  integration-readiness.md  integration-testing.md  langchain-acp.md  llms-full.txt  llms.txt  projection-cookbook.md  providers.md  pydantic-acp.md  testing.md
docs/.partials/: index-header.html
docs/about/: index.md
docs/api/: acpkit.md  acpremote.md  codex_auth_helper.md  langchain_acp.md  pydantic_acp.md
docs/examples/: deepagents.md  dynamic-factory.md  factory.md  finance.md  index.md  langchain-codex.md  langchain-workspace.md  minimal.md  providers.md  remote-hosting.md  travel.md  workspace-agent.md
docs/getting-started/: installation.md  langchain-quickstart.md  pydantic-quickstart.md  quickstart.md
docs/langchain-acp/: adapter-config.md  bridges.md  plans-thinking-approvals.md  projections.md  prompt-resources.md  providers.md  runtime-controls.md  session-state.md
docs/pydantic-acp/: adapter-config.md  plans-thinking-approvals.md  prompt-resources.md  runtime-controls.md  session-state.md
docs/stylesheets/: tweaks.css
examples/: __init__.py  __main__.py  index.html  say_hello.py
examples/acpremote/: README.md  __init__.py  serve_langchain_workspace.py  serve_pydantic_finance.py
examples/deepagents/: index.html
examples/dynamic-factory/: index.html
examples/finance/: index.html
examples/langchain/: README.md  codex_graph.py  deepagents_graph.py  workspace_graph.py
examples/langchain-codex/: index.html
examples/langchain-workspace/: index.html
examples/pydantic/: .gitignore  README.md  bridges.py  factory_agent.py  finance_agent.py  hook_projection.py  host_context.py  my_agent.py  static_agent.py  strong_agent.py  strong_agent_v2.py  travel_agent.py
examples/pydantic-acp/: README.md  approvals.py  note_agent.py  providers.py
examples/remote-hosting/: index.html
examples/travel/: index.html
getting-started/installation/: index.html
getting-started/langchain-quickstart/: index.html
getting-started/pydantic-quickstart/: index.html
getting-started/quickstart/: index.html
helpers/: index.html
host-backends/: index.html
integration-audit/: index.html
integration-readiness/: index.html
integration-testing/: index.html
langchain-acp/: index.html
langchain-acp/adapter-config/: index.html
langchain-acp/bridges/: index.html
langchain-acp/plans-thinking-approvals/: index.html
langchain-acp/projections/: index.html
langchain-acp/prompt-resources/: index.html
langchain-acp/providers/: index.html
langchain-acp/runtime-controls/: index.html
langchain-acp/session-state/: index.html
projection-cookbook/: index.html
providers/: index.html
pydantic-acp/: index.html
pydantic-acp/adapter-config/: index.html
pydantic-acp/plans-thinking-approvals/: index.html
pydantic-acp/prompt-resources/: index.html
pydantic-acp/runtime-controls/: index.html
pydantic-acp/session-state/: index.html
scripts/: check_pypi_versions.py  generate_llms_docs.py  rename_workspace.py  run_if_major_change.py  save_coverage_summary.py
search/: search_index.json
src/acpkit/: __init__.py  __main__.py  _compatibility_schema.py  _version.py  adapters.py  cli.py  compatibility.py  runtime.py
src/python_template/: __init__.py  __main__.py
testing/: index.html
tests/: conftest.py  test_acpkit_cli.py  test_compatibility_manifest.py  test_connect_codex.py  test_native_langchain_agent.py  test_native_pydantic_agent.py  test_this.py
tests/acpremote/: test_command_server.py  test_examples.py  test_helpers.py  test_phase1.py  test_phase2.py  test_phase3.py
tests/codex_auth_helper/: __init__.py  support.py  test_auth.py  test_factory.py
tests/langchain/: support.py  test_examples.py  test_low_level_helpers.py  test_runtime.py  test_support.py
tests/pydantic/: support.py  test_adapter_helpers.py  test_approvals.py  test_bridge_builder.py  test_bridge_capability_support.py  test_bridge_hooks.py  test_bridge_mcp.py  test_bridge_prepare_tools.py  test_bridge_thinking.py  test_bridge_web_capabilities.py  test_bridges.py  test_compat.py  test_examples.py  test_hook_introspection.py  test_host.py  test_host_policy.py  test_low_level_helpers.py  test_models.py  test_projection.py  test_runtime.py  (+7 more)
(+24 files in other folders)
